# python-flask-mongo-api-boilerplate

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile.development  Dockerfile.production  Python Flask Mongo Api Boilerplate.postman_collection.json  README.md  app.py  dev.docker-compose.yml  prod.docker-compose.yml  pyproject.toml  requirements.test.txt  requirements.txt  test.docker-compose.yml
.github/workflows/: ci.yml
src/blueprints/: routes.py
src/blueprints/v1/: health_bp.py  note_bp.py
src/configs/: default_config.py  development_config.py  gunicorn_config.py  logger_config.py  mongo_config.py  testing_config.py
src/constants/: codes.py  defaults.py  messages.py
src/controllers/: health_controller.py  note_controller.py  template_controller.py
src/data_access/: note_dao.py  template_dao.py
src/models/: note_model.py
src/services/: note_service.py  template_service.py
src/startup/: init_notes.py
src/utils/: error_handler.py  exceptions.py  exceptions_decorator.py  exceptions_handler.py
test/: conftest.py
test/test_blueprints/: test_routes.py
test/test_configs/: test_default_config.py  test_development_config.py  test_gunicorn_config.py  test_logger_config.py  test_mongo_config.py  test_production_config.py  test_testing_config.py
test/test_constants/: test_codes_and_messages.py
test/test_controllers/: test_template_controller.py
test/test_data_access/: test_template_dao.py
test/test_models/: test_template_model.py
test/test_services/: test_template_service.py
test/test_startup/: test_init_templates.py
test/test_utils/: test_error_handler.py
tests/test_blueprints/: test_health_bp.py  test_note_bp.py  test_routes.py
tests/test_configs/: test_mongo_config.py
tests/test_constants/: test_codes_and_messages.py
tests/test_controllers/: test_health_controller.py  test_note_controller.py
tests/test_data_access/: test_note_dao.py
tests/test_models/: test_note_model.py
tests/test_services/: test_note_service.py
tests/test_startup/: test_init_notes.py
tests/test_utils/: test_exceptions.py  test_exceptions_decorator.py  test_helpers.py
