[project]
name = "python-flask-mongo-api-boilerplate"
version = "1.0.0"
description = "Python Flask Mongo Api Boilerplate is a production-ready boilerplate for building REST APIs with Flask and MongoDB, designed to eliminate the repetitive setup and architectural decisions that come with every new backend project."
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.3",
    "pymongo==4.16.0",
    "pydantic==2.11.9",
    "gunicorn==23.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.3.0",
    "pip-audit==2.7.3",
    "ruff==0.11.12",
    "mypy==1.13.0",
]
test = [
    "pytest==9.0.3",
    "pytest-env==1.1.5",
    "pytest-cov==4.1.0",
    "pytest-timeout==2.3.1",
    "pytest-xdist==3.5.0",
]

[tool.distutils.egg_info]
egg_base = "."


[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
log_cli = true
log_cli_level = "WARNING"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
env = [
    "TEST_MONGO_HOST=localhost",
    "TEST_MONGO_PORT=27018",
    "TEST_MONGO_USER=admin",
    "TEST_MONGO_PASS=secret123",
    "TEST_MONGO_DB=test_db",
    "D:MONGO_URI=mongodb://admin:secret123@localhost:27018/test_db?authSource=admin",
    "MONGO_DB_NAME=test_db",
    "MONGO_HOST=localhost",
    "MONGO_PORT=27018",
    "MONGO_USER=admin",
    "MONGO_PASS=secret123",
]


[tool.ruff]
line-length = 120
exclude = [".git", "__pycache__", "env", "venv", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "SIM", "C4", "RET", "RUF"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"src/configs/*.py" = ["S104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
exclude = ["venv", "tests"]